# AutoBuilder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.claude/: checkpoints.json  loop-results.json  settings.json
.claude/.specloop/: sessions.json
.claude/agents/: architect.md  garbage-cleanup.md  reflector.md  reviewer.md  subtask-heavy.md  subtask.md  test-gates.md
.claude/commands/: architect.md  build-phase.md  fullstack.md  garbage-cleanup.md  improve-prompt.md  model-phase.md  review-changes.md  shape-phase.md  spec-phase.md  update-phase.md
.claude/rules/: common-errors.md  standards.md
.claude/specflow/: spec-steering-setup.md  spec-steering-update.md
.dev/: .architect.md  .decision-log.md  .standards.md  .workflow.md  00-VISION.md  01-ARCHITECTURE.md  01-PRD.md  01-ROADMAP.md  02-ARCHITECTURE.md  02-TECH_STACK.md  03-AGENTS.md  03-STRUCTURE.md  04-SKILLS.md  04-TECH_STACK.md  05-AGENTS.md  05-DEV_SETUP.md  05-WORKFLOWS.md  06-PROVIDERS.md  06-SKILLS.md  06-STATE_MEMORY.md  07-COMPONENTS.md  07-TOOLS.md  07-WORKFLOWS.md  08-DEV_SETUP.md  08-ROADMAP.md  08-STATE_MEMORY.md  09-DELIVERY.md  09-TOOLS.md  10-DEV_SETUP.md  AGENTS.md  CLAUDE.md  INDEX.md
.dev/.archive/: .architect_260311.md
.dev/.discussion/: 260114_plan-shaping.md  260211_framework-decision-evolution.md  260211_plan-shaping.md  260211_technical-spike-adk-vs-pydantic.md  260214_hierarchical-supervision.md  260216_terminology-skills-pm.md  260227_project-review.md  design-changelog.md  phase1-decision.md
.dev/.knowledge/: INDEX.md  QUICKSTART.md  README.md  SEARCH_GUIDE.md
.dev/.notes/: 260114_prompts.md
.dev/.research/: 260307_agent-framework-patterns-2026.md  260311_claude-code-skills-system.md  260312_external-agentic-systems.md  260312_workflow-composition-patterns.md
.dev/.todo/: 260212_project-initialize.md  260219_workflow-refactor.md  260228_pre-phase-5.md  260311_pre-phase-9.md  260413_pre-phase-14.md  capabilities.md
.dev/architecture/: agents.md  clients.md  context-optimizer.md  context.md  data.md  engine.md  events.md  execution.md  gateway.md  observability.md  skills.md  state.md  tools.md  workers.md  workflow-eval.md  workflows.md
app/: __main__.py
app/agents/: pm.md  (+23 more)
scripts/: calc-loc.sh  check-arch-change.sh
templates/: agents.template.md  blueprint.template.md  claude.template.md  readme.template.md
tests/: README.md  conftest.py  test_scaffold.py
(+400 files in other folders)
