[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autobuilder"
version = "0.1.0"
description = "AI-powered development workflow automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "litellm",
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "pgvector",
    "arq",
    "redis[hiredis]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "typer",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
