[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autobuilder"
version = "0.1.0"
description = "AI-powered development workflow automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "litellm",
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "pgvector",
    "arq",
    "redis[hiredis]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "typer",
    "pyyaml",
    "beautifulsoup4>=4.14.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TC"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/phase1"
markers = [
    "network: marks tests requiring network access (may be slow or flaky)",
]
